# OpenShell

./: .gitignore  AGENTS.md  CI.md  CONTRIBUTING.md  Cargo.toml  TESTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/pr-gate/: action.yml
.github/workflows/: e2e-test.yml  release-dev.yml
architecture/: build.md  gateway.md  sandbox.md  security-policy.md
crates/openshell-cli/src/: main.rs  run.rs
crates/openshell-cli/tests/: provider_commands_integration.rs
crates/openshell-core/: Cargo.toml  README.md
crates/openshell-core/src/: config.rs  grpc_client.rs  host_pattern.rs  lib.rs  middleware.rs  proto_struct.rs  (+1 more)
crates/openshell-driver-kubernetes/: Cargo.toml
crates/openshell-driver-vm/: Cargo.toml
crates/openshell-sandbox/: Cargo.toml
crates/openshell-sdk/: Cargo.toml  README.md
crates/openshell-server/: Cargo.toml
crates/openshell-supervisor-middleware/: Cargo.toml
crates/openshell-supervisor-middleware-builtins/: Cargo.toml
crates/openshell-supervisor-middleware-builtins/src/: lib.rs  regex.rs
crates/openshell-supervisor-middleware/src/: headers.rs  lib.rs  remote.rs
crates/openshell-supervisor-network/: Cargo.toml
crates/openshell-supervisor-process/: Cargo.toml
crates/openshell-tui/: Cargo.toml
docs/: index.yml
docs/extensibility/: supervisor-middleware.mdx
docs/kubernetes/: setup.mdx
docs/observability/: logging.mdx
docs/reference/: gateway-config.mdx  policy-schema.mdx  sandbox-compute-drivers.mdx
docs/sandboxes/: manage-providers.mdx  policies.mdx  providers-v2.mdx
docs/security/: best-practices.mdx
e2e/python/: conftest.py  test_sandbox_providers.py
e2e/rust/: e2e-vm.sh
examples/bring-your-own-container/: Dockerfile
proto/: sandbox.proto  supervisor_middleware.proto
providers/: github.yaml
tasks/: test.toml
tasks/scripts/: build-env.sh  gateway-docker.sh  stage-prebuilt-binaries.sh  test-build-env.sh
(+56 files in other folders)
