# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-supervisor-middleware-builtins"
description = "First-party in-process supervisor middleware implementations for OpenShell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openshell-core = { path = "../openshell-core", default-features = false }

miette = { workspace = true }
prost-types = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true, features = ["server"] }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
