# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-supervisor-middleware"
description = "Supervisor middleware registry and chain execution for OpenShell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openshell-core = { path = "../openshell-core", default-features = false }

miette = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["channel", "server", "tls-native-roots"] }

[dev-dependencies]
openshell-supervisor-middleware-builtins = { path = "../openshell-supervisor-middleware-builtins" }
tokio-stream = { workspace = true, features = ["net"] }

[lints]
workspace = true
